syntax = "proto3";
option java_multiple_files = true;
package com.grpc;
import "google/protobuf/empty.proto";

message LogMessage {
  int64 id = 1;
  int32 w = 2;
}

message LogMessageAck {
  int64 id = 1;
  string status = 2;
}

service SendMessageService {
  rpc send(LogMessage) returns (LogMessageAck);
}

service AppendMessageService {
  rpc append(LogMessage) returns (LogMessageAck);
}